language-server/src/tests/snapshots/gleam_language_server__tests__action__remove_echo_with_message.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  echo 1 + 2 as \"message\"\n}"
---
----- BEFORE ACTION
pub fn main() {
  echo 1 + 2 as "message"
  ↑                      
}


----- AFTER ACTION
pub fn main() {
  1 + 2
}
