language-server/src/tests/snapshots/gleam_language_server__tests__action__remove_echo_with_message_and_comment.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  echo 1 + 2\n    // Hello!\n    as \"message\"\n}"
---
----- BEFORE ACTION
pub fn main() {
  echo 1 + 2
  ↑         
    // Hello!
    as "message"
}


----- AFTER ACTION
pub fn main() {
  1 + 2
}
