language-server/src/tests/snapshots/gleam_language_server__tests__action__remove_echo_with_message_and_comment_2.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  echo 1 + 2 as\n    // Hello!\n    \"message\"\n}"
---
----- BEFORE ACTION
pub fn main() {
  echo 1 + 2 as
  ↑            
    // Hello!
    "message"
}


----- AFTER ACTION
pub fn main() {
  1 + 2
}
