language-server/src/tests/snapshots/gleam_language_server__tests__action__remove_entire_unused_import.snap
---
source: language-server/src/tests/action.rs
expression: "\n// test\nimport result.{unused, unused_again}\n\npub fn main() {\n  todo\n}\n"
---
----- BEFORE ACTION

// test
▔▔▔▔▔▔▔
import result.{unused, unused_again}
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔

pub fn main() {
↑              
  todo
}


----- AFTER ACTION

// test

pub fn main() {
  todo
}
