language-server/src/tests/snapshots/gleam_language_server__tests__action__remove_multiple_redundant_tuple_with_catch_all_pattern.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  case #(1, 2), #(3, 4) {\n    #(2, 2), #(2, 2) -> 0\n    #(1, 2), _ -> 0\n    _, #(1, 2) -> 0\n    _, _ -> 1\n  }\n}"
---
----- BEFORE ACTION
pub fn main() {
  case #(1, 2), #(3, 4) {
  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑        
    #(2, 2), #(2, 2) -> 0
    #(1, 2), _ -> 0
    _, #(1, 2) -> 0
    _, _ -> 1
  }
}


----- AFTER ACTION
pub fn main() {
  case 1, 2, 3, 4 {
    2, 2, 2, 2 -> 0
    1, 2, _, _ -> 0
    _, _, 1, 2 -> 0
    _, _, _, _ -> 1
  }
}
