language-server/src/tests/snapshots/gleam_language_server__tests__action__remove_multiple_unused_values.snap
---
source: language-server/src/tests/action.rs
expression: "\n// test\nimport result.{type Unused, used, unused, unused_again, type Used, used_again}\n\npub fn main(x: Used) {\n  #(used, used_again)\n}\n"
---
----- BEFORE ACTION

// test
▔▔▔▔▔▔▔
import result.{type Unused, used, unused, unused_again, type Used, used_again}
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔

pub fn main(x: Used) {
↑                     
  #(used, used_again)
}


----- AFTER ACTION

// test
import result.{used, type Used, used_again}

pub fn main(x: Used) {
  #(used, used_again)
}
