language-server/src/tests/snapshots/gleam_language_server__tests__action__remove_multiple_unused_values_2.snap
---
source: language-server/src/tests/action.rs
expression: "\n// test\nimport result.{type Unused, used, unused, type Used, unused_again}\n\npub fn main(x: Used) {\n  used\n}\n"
---
----- BEFORE ACTION

// test
▔▔▔▔▔▔▔
import result.{type Unused, used, unused, type Used, unused_again}
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔

pub fn main(x: Used) {
↑                     
  used
}


----- AFTER ACTION

// test
import result.{used, type Used}

pub fn main(x: Used) {
  used
}
