language-server/src/tests/snapshots/gleam_language_server__tests__action__remove_opaque_from_private_type.snap
---
source: language-server/src/tests/action.rs
expression: "opaque type Wibble {\n  Wobble\n}\n"
---
----- BEFORE ACTION
opaque type Wibble {
            ↑       
  Wobble
}


----- AFTER ACTION
type Wibble {
  Wobble
}
